feat: add task creation and info display

--- a/src/scss/components/_info.scss
+++ b/src/scss/components/_info.scss
@@ -1,4 +1,9 @@
 .info {
 	width: 40vw;
 	background-color: $light-grey;
+	transition: opacity ease-in-out 0.25s;
+
+	&__empty {
+		opacity: 0;
+	}
 }
