--- a/src/scss/components/_var.scss
+++ b/src/scss/components/_var.scss
@@ -2,9 +2,11 @@ $black: rgba(0, 0, 0, 1);
 $white: rgba(255, 255, 255, 1);
 $aqua: rgba(0, 149, 217, 1);
 $blue-deep: rgba(24, 66, 108, 1);
+$blue-deep-2: rgb(8, 38, 68);
 $blue-light: rgba(174, 219, 242, 1);
 $red: rgba(240, 112, 106, 1);
-$grey: rgb(66, 66, 66);
+$grey: rgb(66, 66, 66, 1);
+$green: rgb(144, 238, 144, 1);
 $light-grey: rgb(83, 83, 83);
 
 $container: 90vw;
