--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -2,7 +2,24 @@
 	.tasks,
 	.info {
 		height: 100%;
+		max-height: 100vh;
 		overflow-y: auto;
 		padding: 2.5rem;
+
+		@include mobile {
+			height: auto;
+			width: 100%;
+		}
+	}
+
+	.tasks {
+		@include mobile {
+			max-height: 75vh;
+		}
+	}
+
+	@include mobile {
+		flex-wrap: wrap;
+		flex-direction: column-reverse;
 	}
 }
